# drip-player

./: .gitignore  LICENSE  README.md  README.zh-CN.md  gen_icon.py  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
config/: playlist.json
scripts/: download-tools.mjs
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: playlist.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/handlers/: fs.rs
src-tauri/src/models/: mod.rs  player_state.rs  playlist.rs
src-tauri/src/services/: audio_backend.rs  audio_wrapper.rs  fs.rs  media_capabilities.rs  media_probe.rs  media_remux.rs  mod.rs  online_resolver.rs  persistence.rs  playback_plan.rs  stream_server.rs  toolchain.rs
src-tauri/src/utils/: dateutil.rs  fs.rs  mod.rs
src/components/: ContextMenu.vue  LoginDialog.vue  Player.vue  Sidebar.vue  TreeNode.vue
src/store/: player.ts
src/utils/: mediaCapabilities.ts
