[package]
name = "drip-player"
version = "1.0.1"
description = "A Tauri desktop media player with probe-first local and online playback."
authors = ["Drip Player contributors"]
license = "MIT"
repository = "git@github.com:dripai/drip-player.git"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
anyhow = "1.0"
dirs = "5.0"
url = "2.5"
rodio = "0.17"
futures = "0.3"
tempfile = "3.10"
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
base64 = "0.21"
warp = { version = "0.3", features = ["tls", "compression"] }
tauri-plugin-updater = "2.9.0"
